# worldcup-predmarket

./: .gitignore  .opencode.yaml  .vercelignore  AGENTS.md  Anchor.toml  Cargo.toml  SKILL.md  TXLINE_STATUS_ID_BUG.md  implementation_plan.md  next.config.ts  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  txodds-soccer-feed-v1.0.md  vercel.json
messages/: en.json  es.json
programs/settlement/: Cargo.toml
programs/settlement/src/: cpi_txline.rs  errors.rs  lib.rs  state.rs
programs/settlement/src/instructions/: cancel.rs  claim.rs  deposit.rs  init_escrow.rs  init_profile.rs  mod.rs  set_txline_token.rs  settle.rs  settle_with_cpi.rs  update_profile.rs
public/: sw.js
scripts/: fund-keeper-usdt.ts  get-txline-token.ts
src/: proxy.ts  txlineSkill.ts  web-push.d.ts
src/app/: globals.css  layout.tsx  page.tsx
src/components/: BetSlipDrawer.tsx  BottomNav.tsx  BottomNavWrapper.tsx  ClientWalletButton.tsx  DappGuard.tsx  LanguageToggle.tsx  LiveFeedItem.tsx  MarketCard.tsx  MarketDetail.tsx  MarketList.tsx  NavBar.tsx  OddsButton.tsx  PoolCard.tsx  PositionCard.tsx  Providers.tsx  PushToggle.tsx  SubscriptionBanner.tsx  SubscriptionGuard.tsx
src/context/: BetSlipContext.tsx  MatchWatcherContext.tsx  NotificationContext.tsx  TxLineContext.tsx
src/hooks/: useAutoSubscribe.ts  usePushNotifications.ts
src/i18n/: request.ts
src/idl/: settlement.json
src/lib/: flags.ts  keeper-auth.ts  keeper.ts  persistence.ts  settlement.ts  supabase.ts  teams.ts  txlineProgram.ts  webPush.ts
supabase/: config.toml
tests/: settlement.ts
(+21 files in other folders)
